CONSTRUINDO TABULEIRO E CARTAS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Jogo da Memória</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
   </head>
   <body>
-    <main class="">
+    <main class="container">
       <header class="">
         <h1>Jogo da Memória</h1>
       </header>
@@ -20,26 +22,20 @@
       </section>
 
       <!-- CARTAS DO JOGO -->
-      <div class="">
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
+      <ul class="tabuleiro">
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+        <li class="carta"></li>
+      </ul>
     </main>
   </body>
 </html>
