CONCLUSÃO DE CLASSES CSS RELACIONADAS A CARTAS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body>
     <main class="container">
@@ -23,7 +24,9 @@
 
       <!-- CARTAS DO JOGO -->
       <ul class="tabuleiro">
-        <li class="carta"></li>
+        <li class="carta">
+          <i class="fa fa-star"></i>
+        </li>
         <li class="carta"></li>
         <li class="carta"></li>
         <li class="carta"></li>
