CRIANDO ARRAY DE CARTAS

--- a/index.html
+++ b/index.html
@@ -25,20 +25,43 @@
       <!-- CARTAS DO JOGO -->
       <ul class="tabuleiro">
         <li class="carta">
-          <i class="fa fa-star"></i>
+          <i></i>
         </li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
-        <li class="carta"></li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
       </ul>
     </main>
+    <script src="js/app.js"></script>
   </body>
 </html>
