ALTERANDO NUM DE CARTAS DO JOGO E CRIANDO README

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
         <li class="carta">
           <i></i>
         </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
+        <li class="carta">
+          <i></i>
+        </li>
       </ul>
     </main>
     <script src="js/app.js"></script>
