--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
         <h1>Jogo da Memória</h1>
       </header>
       <!-- CRIANDO PLACAR -->
-      <section class="">
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+      <section class="placar">
+        <ul class="estrela">
+          <li class="fa fa-star"></li>
+          <li class="fa fa-star"></li>
+          <li class="fa fa-star"></li>
         </ul>
+
+        <div class="reiniciar">
+          <i class="fa fa-repeat"></i>
+        </div>
       </section>
 
       <!-- CARTAS DO JOGO -->
