INSERÇÃO FUNÇÕES DE QNT DE MOVIMENTOS E ESTRELAS

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <div class="reiniciar">
           <i class="fa fa-repeat"></i>
         </div>
+
+        <p>Movimentos: <span class="jogadas"></span></p>
       </section>
 
       <!-- CARTAS DO JOGO -->
