--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
         </li>
       </ul>
     </main>
+
+    <div id="modalVitoria" class="modal">
+      <div class="modalContent">
+        <h1>Jogo da Memória</h1>
+      </div>
+    </div>
+
     <script src="js/app.js"></script>
   </body>
 </html>
