MARCAÇÃO DO HTML PARA CRONOMETRO E ESTILIZAÇÃO CSS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
           <i class="fa fa-repeat"></i>
         </div>
 
-        <p>Movimentos: <span class="jogadas"></span></p>
+        <div class='cronometro'>
+          <p>Movimentos: <span class="jogadas"></span></p>
+          <p id="tempo"></p>
+        </div>
       </section>
 
       <!-- CARTAS DO JOGO -->
